@@ -1,3 +1,5 @@
+ENV['STRICT_VARIABLES'] = 'yes'
+
 require 'simp/rake/pupmod/helpers'
 
 Simp::Rake::Pupmod::Helpers.new(File.dirname(__FILE__))
