@@ -8,13 +8,11 @@ describe 'libreswan::config::pki' do
           facts
         end
 
-        context "with pki true libreswan::config should init NSS db and copy certs" do
+        context "with pki = true libreswan::config should init NSS db and copy certs" do
           let(:pre_condition) {
             "class { 'libreswan':
-              service_name            => 'ipsec',
-              pki                     => true,
-              app_pki_external_source => '/etc/pki/simp-test',
-              app_pki_dir             => '/etc/foo'
+              service_name => 'ipsec',
+              pki          => true,
             }"
           }
 
@@ -22,52 +20,55 @@ describe 'libreswan::config::pki' do
             :require  => 'File[/etc/ipsec.conf]'
             })
           }
-          it { is_expected.to create_file('/etc/foo').with({
+          it { is_expected.to create_file('/etc/pki/simp_apps/libreswan/x509').with({
               :ensure  => 'directory',
             })
           }
-          it { is_expected.to create_pki__copy('/etc/foo').with({
-            :require  => 'File[/etc/foo]',
+          it { is_expected.to create_pki__copy('libreswan').with({
+            :source   => '/etc/pki/simp/x509'
             })
           }
           it { is_expected.to_not create_class('pki') }
         end
 
-        context "with pki false libreswan::config should init NSS db and copy certs" do
-          let(:pre_condition) {
-            "class { 'libreswan':
+        context "with pki = false libreswan::config should not init NSS db and copy certs" do
+          let(:pre_condition) { "
+            class { 'libreswan':
                service_name => 'ipsec',
-               pki => false,
-               app_pki_dir => '/etc/foo' }"
-            }
+               pki          => false,
+            }"
+          }
           let(:hieradata) { 'test1_hiera' }
 
-          it { is_expected.to create_libreswan__nss__init_db('NSSDB /etc/ipsec.d').with({
+          it { is_expected.to_not create_libreswan__nss__init_db('NSSDB /etc/ipsec.d').with({
             :require  => 'File[/etc/ipsec.conf]'
             })
           }
-          it { is_expected.to create_file('/etc/foo/pki').with({
+          it { is_expected.to_not create_file('/etc/pki/simp_apps/libreswan/x509').with({
               :ensure  => 'directory',
             })
           }
-          it { is_expected.to_not create_pki__copy('/etc/foo') }
+          it { is_expected.to_not create_pki__copy('libreswan') }
           it { is_expected.to_not create_class('pki') }
         end
 
-        context "with pki true libreswan::config should init NSS db and copy certs" do
-          let(:pre_condition) { 'class { "libreswan": service_name => "ipsec",
-            pki => "simp", app_pki_external_source => "/etc/pki/simp-test", app_pki_dir => "/etc/foo" }'}
-
+        context "with pki = simp libreswan::config should init NSS db and copy certs" do
+          let(:pre_condition) {"
+            class { 'libreswan':
+              service_name => 'ipsec',
+              pki          => 'simp',
+            }"
+          }
           it { is_expected.to create_libreswan__nss__init_db('NSSDB /etc/ipsec.d').with({
             :require  => 'File[/etc/ipsec.conf]'
             })
           }
-          it { is_expected.to create_file('/etc/foo').with({
+          it { is_expected.to create_file('/etc/pki/simp_apps/libreswan/x509').with({
               :ensure  => 'directory',
             })
           }
-          it { is_expected.to create_pki__copy('/etc/foo').with({
-            :require  => 'File[/etc/foo]',
+          it { is_expected.to create_pki__copy('libreswan').with({
+            :source => '/etc/pki/simp/x509'
             })
           }
           it { is_expected.to create_class('pki') }
