@@ -1,3 +1,7 @@
+* Fri Jan 13 2017 Nick Markowski <nmarkowski@keywcorp.com> - 3.0.0-0
+- Updated pki scheme.
+- Application certs now managed in /etc/pki/simp_apps/libreswan/x509
+
 * Thu Dec 22 2016 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 3.0.0-0
 - Update Global Catalysts
 - Strong type
